<resources>
    <string name="app_name">MCF i-talk</string>
    <string name="mcf_i_talk">MCF i-talk</string>
    <string name="italkFeedback">MCF i-talk Feedback</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="satisfactory">Satisfactory</string>
    <string name="employee_code">Employee Code</string>
    <string name="speaker">Speaker</string>
    <string name="lecture_number">Lecture Number</string>
    <string name="questionarie_body">How well satisfied are you with respect to the following?</string>
    <string name="i_talk_about">Please provide your valuable feedback and help us make i-talk Awesome :)</string>
    <string name="lectureby">Speaker: </string>
    <string name="lectureNo">Lecture Number: </string>
    <string name="lecture_title">Lecture Title</string>
    <string name="date">Date</string>
</resources>