<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feedback_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.koffeecuptales.feedify.FeedbackForm">

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="0dp"
        android:layout_height="119dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="16dp"



        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/optionsGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/optionsGroup"
        android:layout_width="0dp"
        android:layout_height="239dp"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="12dp"


        android:layout_marginStart="32dp"
        android:layout_marginTop="221dp"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/excellent"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/good"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/satisfactory"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/submitButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        android:enabled="true"
        android:onClick="submitOptionClicked"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionsGroup" />
</android.support.constraint.ConstraintLayout>
